; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/adfs/extr_inode.c_adfs_write_inode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/adfs/extr_inode.c_adfs_write_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32, i32, %struct.super_block* }
%struct.super_block = type { i32 }
%struct.writeback_control = type { i64 }
%struct.object_info = type { i32, i32, i32, i32, i32, i64, i32 }
%struct.TYPE_2__ = type { i32, i32, i32, i32 }

@WB_SYNC_ALL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @adfs_write_inode(%struct.inode* %0, %struct.writeback_control* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.writeback_control*, align 8
  %5 = alloca %struct.super_block*, align 8
  %6 = alloca %struct.object_info, align 8
  %7 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.writeback_control* %1, %struct.writeback_control** %4, align 8
  %8 = load %struct.inode*, %struct.inode** %3, align 8
  %9 = getelementptr inbounds %struct.inode, %struct.inode* %8, i32 0, i32 2
  %10 = load %struct.super_block*, %struct.super_block** %9, align 8
  store %struct.super_block* %10, %struct.super_block** %5, align 8
  %11 = call i32 (...) @lock_kernel()
  %12 = load %struct.inode*, %struct.inode** %3, align 8
  %13 = getelementptr inbounds %struct.inode, %struct.inode* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = getelementptr inbounds %struct.object_info, %struct.object_info* %6, i32 0, i32 6
  store i32 %14, i32* %15, align 8
  %16 = getelementptr inbounds %struct.object_info, %struct.object_info* %6, i32 0, i32 5
  store i64 0, i64* %16, align 8
  %17 = load %struct.inode*, %struct.inode** %3, align 8
  %18 = call %struct.TYPE_2__* @ADFS_I(%struct.inode* %17)
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 4
  %21 = getelementptr inbounds %struct.object_info, %struct.object_info* %6, i32 0, i32 4
  store i32 %20, i32* %21, align 8
  %22 = load %struct.inode*, %struct.inode** %3, align 8
  %23 = call %struct.TYPE_2__* @ADFS_I(%struct.inode* %22)
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = getelementptr inbounds %struct.object_info, %struct.object_info* %6, i32 0, i32 3
  store i32 %25, i32* %26, align 4
  %27 = load %struct.inode*, %struct.inode** %3, align 8
  %28 = call %struct.TYPE_2__* @ADFS_I(%struct.inode* %27)
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = getelementptr inbounds %struct.object_info, %struct.object_info* %6, i32 0, i32 2
  store i32 %30, i32* %31, align 8
  %32 = load %struct.inode*, %struct.inode** %3, align 8
  %33 = call %struct.TYPE_2__* @ADFS_I(%struct.inode* %32)
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = getelementptr inbounds %struct.object_info, %struct.object_info* %6, i32 0, i32 1
  store i32 %35, i32* %36, align 4
  %37 = load %struct.inode*, %struct.inode** %3, align 8
  %38 = getelementptr inbounds %struct.inode, %struct.inode* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = getelementptr inbounds %struct.object_info, %struct.object_info* %6, i32 0, i32 0
  store i32 %39, i32* %40, align 8
  %41 = load %struct.super_block*, %struct.super_block** %5, align 8
  %42 = load %struct.writeback_control*, %struct.writeback_control** %4, align 8
  %43 = getelementptr inbounds %struct.writeback_control, %struct.writeback_control* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = load i64, i64* @WB_SYNC_ALL, align 8
  %46 = icmp eq i64 %44, %45
  %47 = zext i1 %46 to i32
  %48 = call i32 @adfs_dir_update(%struct.super_block* %41, %struct.object_info* %6, i32 %47)
  store i32 %48, i32* %7, align 4
  %49 = call i32 (...) @unlock_kernel()
  %50 = load i32, i32* %7, align 4
  ret i32 %50
}

declare dso_local i32 @lock_kernel(...) #1

declare dso_local %struct.TYPE_2__* @ADFS_I(%struct.inode*) #1

declare dso_local i32 @adfs_dir_update(%struct.super_block*, %struct.object_info*, i32) #1

declare dso_local i32 @unlock_kernel(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
